--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<p>hello world</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="content">
+  <h1 class="title">Welcome to my Gitub.
+    <div class="aurora">
+      <div class="aurora__item"></div>
+      <div class="aurora__item"></div>
+      <div class="aurora__item"></div>
+      <div class="aurora__item"></div>
+    </div>
+  </h1>
+  <h1 style="color: yellow;">And</h1>
+  <h2 class="subtitle">Congrtulations!</h2>
+    <p>You found me....</p>
+</div>
+</body>
+</html>
+
